--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bu-ist/bu-navigation-core-widget",
     "description": "Core data methods and widget logic for BU Navigation",
-    "type": "library",
+    "type": "wordpress-dropin",
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
         "squizlabs/php_codesniffer": "^3.5",
