--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,7 @@
     "name": "bu-ist/bu-navigation-core-widget",
     "description": "Core data methods and widget logic for BU Navigation",
     "type": "wordpress-dropin",
-    "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "squizlabs/php_codesniffer": "^3.5",
-        "wp-coding-standards/wpcs": "^2.3"
-    },
+    "license": "GPL2+",
     "authors": [
         {
             "name": "Niall Kavanagh",
@@ -33,6 +29,11 @@
             "email": "jaydub@bu.edu"
         }
     ],
+    "require-dev": {
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+        "squizlabs/php_codesniffer": "^3.5",
+        "wp-coding-standards/wpcs": "^2.3"
+    },
     "require": {
         "composer/installers": "^1.10"
     }
